Add the footer section.
The project is purely html and css and follows
a desktop approach!

--- a/index.html
+++ b/index.html
@@ -118,5 +118,12 @@
         </div>
       </div>
     </div>
+
+    <!-- footer -->
+    <footer class="footer">
+      <div class="credits">
+        <p>Copyright &copy; The Odin Project 2025</p>
+      </div>
+    </footer>
   </body>
 </html>
